# Sico

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
backend/: go.mod  (+3 more)
backend/internal/embeddata/skills/android-tester/: .gitattributes  .gitignore  Makefile  README.md  SKILL.md  pyproject.toml
core/: .gitignore  README.md  pyproject.toml
core/app/: main.py
core/app/biz/chat/: chat.py  compaction.py  context.py  conversation_history.py  prompt.py  prompt_sections.py  router.py  service.py  turn_timing.py  types.py  workspace_init.py  workspace_init_hooks.py
core/app/biz/chat/adapters/: __init__.py
core/app/biz/chat/prompts/: chat_system_prompt.md  compaction_summarization_prompt.md  fast_rules.md  inspect_rules.md  intent_check_system_prompt.md  recommendation_task_gen_prompt.md  retry_continuation_prompt.md  session_title_gen_prompt.md  task_rules.md
core/app/biz/health/: service.py
core/app/biz/knowledge/: __init__.py  service.py
core/app/biz/llm/: __init__.py  service.py
core/app/biz/reverse_grpc/: conversation.py  knowledge.py  llmhubs.py  sandbox.py  taskruntime.py
core/app/biz/skill/: __init__.py  paths.py  resolver.py  service.py
core/app/biz/task_runtime/: __init__.py  artifact_store.py  config.py  context.py  db_store.py  event_bus.py  execution_plan.py  factory.py  manager.py  models.py  naming.py  playbook_retrieval.py  policy.py  progress_events.py  progress_port.py  rerun_sources.py  results.py  run_coordinator.py  run_support.py  sandbox.py  sandbox_coordinator.py  sandbox_types.py  scheduler.py  skill_loader.py  stale_reconciler.py  state_machine.py  store.py  sub_agent_llm.py  submitter.py  time_utils.py  tool_catalog.py  workspace.py
core/app/biz/task_runtime/executors/: __init__.py  base.py  command_backend.py  runner_executor.py  skill_executor.py  sub_agent.py  tool_executor.py
core/app/document/: __init__.py  base.py  markitdown.py
core/app/document/prompts/: summarize.txt
core/app/experiences/: __init__.py  adapter.py  llm.py  playbook.py  prompts.py  roles.py  runner.py  service.py  store.py
core/app/experiences/deduplication/: __init__.py  config.py  detector.py  manager.py  operations.py  prompts.py
core/app/experiences/integrations/: __init__.py  base.py  default_parser.py  dw_registry.py
core/app/experiences/playbook/: __init__.py  consolidator.py  delta.py  model.py  similarity.py  store.py
core/app/experiences/prompts/: trajectory_extraction.md
core/app/llmhubs/: README.md  __init__.py  chat_client.py  computer_use.py  config_loader.py  embedding.py  errors.py  hub.py  image_detail.py  request_builder.py  response_format.py  structured.py  types.py
core/app/llmhubs/adapters/: __init__.py  anthropic.py  azure_openai.py  base.py  gemini.py  http_binary.py  http_json.py  openai_compat.py
core/app/memory/: __init__.py  mem0.py
core/app/schemas/: consts.py
core/app/schemas/common/: common.py
core/app/schemas/conversation/: __init__.py  api.py  chat.py  message.py  plan.py
core/app/storage/: fs.py  plan_fs.py  redis.py  sandbox_pod.py
core/app/tools/: __init__.py  common.py  context.py  curl.py  delegate.py  download.py  edit.py  get_task_detail.py  grep.py  parse_document.py  parse_document_hooks.py  plan.py  read.py  remove.py  report.py  run_command.py  search_memory.py  upload_assets.py  web_search.py  webfetch.py  write_file.py
core/app/tools/sandbox_tools/: __init__.py  client.py  lifecycle.py
core/app/utils/: __init__.py  cache.py  content_understanding.py  llm_response_builder.py  logger.py  response.py  runner.py  sanitize.py  uploads.py
core/app/utils/eventbus/: __init__.py  azure_service_bus.py  eventbus.py  kafka.py  mock.py
core/deployments/docker/: Dockerfile
core/deployments/helm/: Chart.yaml  values.yaml
core/deployments/helm/templates/: deployment.yaml  service.yaml
core/tests/: test_knowledge_service.py  test_markitdown_xlsx.py  test_plan_schema.py  test_run_command_status.py  test_sanitize.py  test_skill_service.py  test_tool_call_status.py  test_tool_deliverable.py  test_workspace_skill_runtime_cleanup.py
core/tests/chat/: conftest.py  test_chat.py  test_context.py  test_general_adapter_args.py  test_general_adapter_subagent.py  test_general_adapter_tool_catalog.py  test_memory.py  test_router.py  test_workbook_adapter_capability.py  test_workbook_archive_manifests.py  test_workspace_init.py
core/tests/experiences/: test_default_parser.py  test_dw_registry.py  test_integrations_init.py  test_playbook_consolidation_compat.py  test_playbook_prune.py  test_section_id_slug.py  test_service_lock.py  test_trajectory_rendering_contract.py
core/tests/llmhubs/: conftest.py  test_detail.py  test_gemini.py  test_kimi_glm.py  test_openai_compat_responses.py  test_response_format.py  test_timeout.py
core/tests/sandbox_tools/: test_client.py
core/tests/storage/: test_fs.py  test_sandbox_pod.py
core/tests/task_runtime/: test_batch_concurrency_planning.py  test_batch_view_step_settling.py  test_command_backend.py  test_config.py  test_db_run_store.py  test_event_bus.py  test_executors.py  test_experience_learning.py  test_file_run_store.py  test_inputs.py  test_models.py  test_plan_editor.py  test_playbook_retrieval.py  test_policy.py  test_production_adapters.py  test_renderers.py  test_rendering_contract.py  test_run_command_executor.py  test_run_coordinator_retry.py  test_sandbox.py  test_sandbox_coordinator.py  test_sandbox_types.py  test_scheduler.py  test_skill_executor.py  test_skill_executor_epe_learning.py  test_skill_loader.py  test_staged_execution.py  test_stale_reconciler_artifacts_root.py  test_state_machine.py  test_sub_agent_llm.py  test_submit_prepared.py  test_submit_prepared_e2e.py  test_submitter_resource_limits.py  test_subscribers_audit_log.py  test_subscribers_metrics.py  test_turn_context.py  test_visibility.py  test_workspace.py
core/tests/tools/: test_context.py  test_grep.py  test_parse_document.py  test_read.py
(+620 files in other folders)
