[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "android-tester-skill"
version = "0.1.0"
description = "Minimal async Android console tester skill using operator/reviewer dual-agent flow"
readme = "SKILL.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pillow>=12.2.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["android_tester*"]

[tool.setuptools.package-data]
android_tester = ["py.typed"]

[project.scripts]
android-tester = "android_tester.main:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 79
exclude = ["*.egg-info", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
