[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewrite-from-doc-skill"
version = "0.1.0"
description = "Rewrite human-authored test cases into GUI Agent executable format using Sico LLM Hub"
readme = "SKILL.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rewrite_from_doc*"]

[project.scripts]
rewrite-from-doc = "rewrite_from_doc.main:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 130
exclude = ["*.egg-info", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
